force-app/main/default/objects/Exercise__c/Exercise__c.object-meta.xml
<CustomObject>
    <label>Exercise</label>
    <nameField>
        <displayFormat>EX-{0}</displayFormat>
        <label>Exercise ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercise</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>