force-app/main/default/objects/Exercise__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <label>Animal ID</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipName>Excercise</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>