force-app/main/default/objects/Exercise__c/fields/Exercise_Hours__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Hours__c</fullName>
    <inlineHelpText>Please enter 30 mins as 0.5 hours</inlineHelpText>
    <label>Exercise Hours</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>