force-app/main/default/objects/Exercise__c/fields/Exercise_Type__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Type__c</fullName>
    <label>Exercise Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Treadmill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>